--- a/src/desktop/src/ui/views/settings/index.css
+++ b/src/desktop/src/ui/views/settings/index.css
@@ -18,7 +18,7 @@
     > div {
         display: flex;
         justify-content: center;
-        max-width: 720px;
+        max-width: 760px;
         width: 100%;
         height: 100%;
     }
